package lapr4.cafeteria.card_account.domain;

public enum MovementType {
    RECHARGE, PURCHASE, REFUND;
}
